--- a/reportLib/Template/html_General.cfg
+++ b/reportLib/Template/html_General.cfg
@@ -16,5 +16,14 @@
     "Version": "1.00",
     "Release": "03/04/2024",
     "UserData": ""
+  },
+  {
+    "Name": "Template 003/2024",
+    "File": "Template003_2024.json",
+    "Description": "Essa é a descrição do template 3...",
+    "Author": "Eric Magalhães Delgado",
+    "Version": "1.00",
+    "Release": "09/04/2024",
+    "UserData": ""
   }
 ]
